# tetris-cle

./: CMakeLists.txt  LICENSE  heaptrack.tetriscle.1242825.zst  resto  resto.cpp  tetriscle  tetriscle.cpp
src/: main.cpp
